--- a/calculator.html
+++ b/calculator.html
@@ -3,7 +3,7 @@
 
 <head>
         <title>Online strange calculator</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles/style.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -40,6 +40,6 @@
             </div>
         </div>
     </div>
-    <script src="index.js"></script>
+    <script src="script/index.js"></script>
 </body>
 </html>
